Libs and JDK upgrade